--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "svelte": "^3.42.5",
     "svelte-preprocess": "^4.10.7",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13"
+    "vite": "^2.9.13",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
+    "autoprefixer": "^10.4.7",
+    "tailwindcss": "^3.1.5"
   }
 }
