--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
   "dependencies": {
     "@connect2ic/core": "^0.1.1",
     "@connect2ic/svelte": "^0.1.1",
-    "@dfinity/agent": "^0.11.3"
+    "@dfinity/agent": "^0.11.3",
+    "svelte-navigator": "^3.2.2"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "next",
     "@types/node": "^18.0.0",
+    "autoprefixer": "^10.4.7",
     "buffer": "^6.0.3",
-    "svelte": "^3.42.5",
-    "svelte-preprocess": "^4.10.7",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.13",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
-    "autoprefixer": "^10.4.7",
-    "tailwindcss": "^3.1.5"
+    "svelte": "^3.42.5",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13"
   }
 }
